--- a/src/components/newsList/newsCard/newsCard.css
+++ b/src/components/newsList/newsCard/newsCard.css
@@ -3,7 +3,8 @@
   max-width: 900px;
   margin: 0px auto;
   display: flex;
-  justify-content: unset;
+  flex-direction: column;
+  justify-content:unset;
   border-left: 0.5px solid var(--card-border);
   border-right: 0.5px solid var(--card-border);
   border-bottom: 0.5px solid var(--card-border);
@@ -11,6 +12,10 @@
 
 .news-list:hover {
   background-color: var(--inactive-color);
+}
+
+.news-list-upper-container{
+  display: flex;
 }
 
 .news-list-left {
@@ -36,7 +41,7 @@
 }
 
 .news-list-share-icon-container{
-    margin-top: 8px; 
+     
 }
 
 .news-list-share-icon{
@@ -82,6 +87,29 @@
   text-decoration: none;
 }
 
+
+
+.news-list-lower-container{
+display: flex;
+justify-content: space-between;
+align-items: center;
+padding: 0px 18px 5px 20px;
+}
+
+.news-list-category-container{
+  
+}
+
+.news-list-category{
+  font-size: 16px;
+  font-weight: 500;
+  color: var(--primary-bg);
+  background-color: var(--thebulletins-blue);
+  border-radius: 4px;
+  padding: 0px 3px;
+  letter-spacing: 1px;
+}
+
 @media (max-width: 480px) {
   .news-list-title{
     padding-right: 8px;
@@ -94,24 +122,8 @@
     min-width: 108px;
     height: 80px;
 }
-}
 
-.news-list-category-container{
-  margin-top: 8px;
-  position: absolute;
- 
+.news-list-lower-container{
+  padding: 0px 18px 5px 3px;
 }
-
-.news-list-category{
-  position: relative;
-  top: 58px;
-  left: 580px;
-  right: 120px;
-  font-size: 16px;
-  font-weight: 500;
-  color: var(--primary-bg);
-  background-color: var(--thebulletins-blue);
-  border-radius: 4px;
-  padding: 0px 6px;
-  letter-spacing: 1px;
 }
